src/test/ui/nll/user-annotations/constant-in-expr-trait-item-2.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/constant-in-expr-trait-item-2.rs:10:5
   |
LL |     <T as Foo<'a>>::C
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime 'a as defined on the function body at 9:8
  --> $DIR/constant-in-expr-trait-item-2.rs:9:8
   |
LL | fn foo<'a, T: Foo<'a>>() -> &'static u32 {
   |        ^^

error: aborting due to previous error

